2001-05-25  Martin Baulig  <baulig@suse.de>

	* gnome-selector-client.c
	(gnome_selector_client_set_uri): New function.
	(gnome_selector_client_add_uri): New function.

2001-05-23  Martin Baulig  <baulig@suse.de>

	* gnome-selector-client.c (gnome_selector_client_construct): Create the
	property bag and use the factory.

2001-05-21  Martin Baulig  <baulig@suse.de>

	* gnome-selector-client.c (PROP_WANT_ENTRY_WIDGET, PROP_WANT_SELECTOR_WIDGET,
	PROP_WANT_BROWSE_DIALOG, PROP_WANT_BROWSE_BUTTON, PROP_WANT_CLEAR_BUTTON,
	PROP_WANT_DEFAULT_BUTTON): Use the new tristate enum.
	(gnome_selector_client_construct): Don't create the property bag but encode
	all the arguments in the moniker string.

	* gnome-selector-component.c: Use the new tristate enum.

	* gnome-image-entry.c, gnome-image-selector.c: Only set properties which
	are different from their default values.

	* gnome-selector-dialog-client.[ch]: New files.

2001-05-21  Martin Baulig  <baulig@suse.de>

	* gnome-image-selector.c, gnome-image-entry.c: Don't include anything
	from components/. Good to see you hacking here again, George :-)

Mon May 21 00:49:03 2001  George Lebl <jirka@5z.com>

	* gnome-ditem-edit.[ch]:  Make it a widget instead of an object, (this
	  is all new api anyway so we're allowed to break it if it's broken)
	  Also whack ALL the accessors for widgets inside as those are
	  stupid.  And make the ref couting scheme on the ditem a bit saner
	  (copy on set, ref on get), and update comments and documention
	  strings througout.  The icon entry stuff doesn't see changes and
	  would get it wrong anyway, need to talk to martin.  Now for my next
	  trick I'll try to get this to follow the .desktop standard.

Sun May 20 23:15:50 2001  George Lebl <jirka@5z.com>

	* gnome-image-selector.c, gnome-image-entry.c: include the component
	  header from the right directory, components/ to make this beast
	  compile ... yay!

2001-05-20  Martin Baulig  <baulig@suse.de>

	* gnome-selector-component.c